Test PartialTspRoadMapOptimizer